<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.selectdatasource.SelectDataSourceActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_view_margin_top"
            style="@style/CardViewStyle">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="@dimen/padding_medium"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_select_data_source"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/padding_large"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_gravity="center_horizontal"/>

            <android.support.design.button.MaterialButton
                    style="@style/MaterialButtonStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/button_room_db"
                    android:text="@string/room_database"/>

            <android.support.design.button.MaterialButton
                    style="@style/MaterialButtonStyle"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/button_call_api"
                    android:text="@string/api_call"
                    />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>