<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="loginViewModel"
                type="com.example.employeepoc.ui.login.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginActivity">

        <View
                android:layout_height="@dimen/padding_match_constrain"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:id="@+id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHeight_percent=".25"
                app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.CardView
                app:layout_constraintWidth_percent=".75"
                android:layout_width="@dimen/padding_match_constrain"
                android:layout_height="wrap_content"
                style="@style/CardViewStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.20">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_input_user_name"
                        style="@style/TextInputStyle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/padding_small"
                        app:error="@{loginViewModel.errorUserName}">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_text_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={loginViewModel.userName}"
                            android:maxLines="1"
                            android:hint="@string/label_user_name"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextInputStyle"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorPrimaryDark"
                        app:layout_constraintTop_toBottomOf="@+id/text_input_user_name"
                        app:layout_constraintStart_toStartOf="@id/text_input_user_name"
                        app:layout_constraintEnd_toEndOf="@id/text_input_user_name"
                        android:layout_margin="@dimen/padding_small"
                        app:error="@{loginViewModel.errorPassword}">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/edit_text_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={loginViewModel.password}"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/label_password"/>
                </android.support.design.widget.TextInputLayout>

                <ImageView
                        android:layout_width="@dimen/image_help_width"
                        android:id="@+id/image_help"
                        android:layout_height="@dimen/image_help_width"
                        android:src="@drawable/ic_help_outline"
                        android:tint="@color/colorPrimary"
                        android:onClick="@{()-> loginViewModel.onHelpClicked()}"
                        app:layout_constraintStart_toStartOf="@id/text_input_password"
                        app:layout_constraintTop_toBottomOf="@+id/text_input_password"
                        android:contentDescription="@string/desc_image_help"/>

                <android.support.design.button.MaterialButton
                        android:layout_width="@dimen/padding_match_constrain"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@id/text_input_password"
                        app:layout_constraintTop_toBottomOf="@id/text_input_password"
                        android:id="@+id/button_save"
                        style="@style/Widget.MaterialComponents.Button"
                        android:onClick="@{()-> loginViewModel.onLoginClicked()}"
                        android:text="@string/label_login"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</layout>